<resources>
    <string name="app_name">The MAC</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_google_oauth">GoogleOAuthActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_with_mac">Login with MAC</string>
    <string name="login_anonymously">Login Anonymously</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_events">Find Event</string>
    <string name="title_activity_bill">Bill</string>
    <string name="title_activity_tennis_courts">Tennis Courts</string>
    <string name="title_activity_more">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_interests">My Interests</string>
    <string name="my_reservations">My Reservations</string>
    <string name="my_statements">My Statements</string>
    <string name="my_statement">My Statement</string>
    <string name="current_charges">Current Charges</string>
    <string name="my_account">My Account</string>
    <string name="bill">Bill</string>
    <string name="tennis_courts">Tennis Courts</string>
    <string name="find_event">Find Event</string>
    <string name="more">More...</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone">Phone</string>
    <string name="email">E-Mail</string>
    <string name="address">Address</string>
    <string name="occupation">Occupation</string>
    <string name="office_address">Office Address</string>
    <string name="mac_information">MAC Information</string>
    <string name="facility_closures">Facility Closures</string>
    <string name="mens_bar">Men\'s Bar</string>
    <string name="parking">Parking</string>
    <string name="directory">Directory</string>
    <string name="asof">as of</string>
    <string name="current_blance">Current Balance</string>
    <string name="transactions">Transactions</string>
    <string name="statement_information">Statement Information</string>
    <string name="statement_date">Statement Date</string>
    <string name="due_date">Due Date</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Unspecified</item>
    </string-array>

    <string-array name="firebase_url_array">
        <item>https://luminous-heat-7934.firebaseio.com</item>
        <item>https://sizzling-inferno-283.firebaseio.com</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="court">COURT</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="ball_machine">BALL MACHINE</string>
    <string name="notes">NOTES</string>
    <string name="reserve">RESERVE</string>
    <string name="cancel">CANCEL</string>
    <string name="simple_search">Simple Search</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="event_types">Event Types</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="search">SEARCH</string>
    <string name="clear">CLEAR</string>
    <string name="event_info">Event Info</string>
    <string name="event_results">Event Results</string>
    <string name="register">REGISTER</string>
    <string name="cancel_registration">CANCEL REGISTRATION</string>
    <string name="about_mac_text">The Multnomah Athletic Club is open everyday, except Christmas. Normal hours are listed below but may change on holidays. Staff are available during regular business hours. If Members don\'t know who to contact for assistance, call the main switchboard at 503–223-6251</string>
    <string name="hours_label">Club Hours</string>
    <string name="m_f">Monday-Friday: 5am - 11pm</string>
    <string name="balance_due">Balance Due</string>
    <string name="balance_forward">Balance Forward</string>
    <string name="statement_transactions">Statment Transactions</string>
    <string name="account_aging">Account Aging</string>
    <string name="current">Current</string>
    <string name="over_30">Over 30</string>
    <string name="over_60">Over 60</string>
    <string name="over_90">Over 90</string>
    <string name="over_120">Over 120</string>
    <string name="parking_text">Members and guests are permitted to park in the Member Parking Structure only while using club facilities, attending club-sponsored functions or attending an event at Providence Park. Juniors may park in the structure only during junior hours.\n\nIn the event of congestion in the Member Parking Structure, members and guests may be directed to overflow parking facilities by parking attendants. As the Member Parking Structure approaches reaching capacity, remaining parking spaces are reserved for member use, and visitors are directed to other available parking options. Parking attendants are responsible to keep members and visitors advised of current parking conditions and for directing guests to park in one of the auxiliary parking lots.\n\nMembers are required to register all vehicles and display a MAC parking sticker in driver\'s side of the windshield. For more information about registering a vehicle, see vehicle registration.\n\nThe Turnaround in front of the main clubhouse is for loading and unloading only. Drivers must remain with their vehicles in the Turnaround at all times. Vehicles parked in violation of this policy may be towed at the owner\'s expense and liability.\n\nParking for the disabled is available in the Parking Structure and Turnaround. Members must display a valid state-issued disabled parking permit. Temporary or special disabled requests should be directed to the club\'s security manager.\n\nMembers who cycle to the club may use their own locks to secure their bikes to one of two bike racks. One is located off the Turnaround in front of the Athletic Entrance, and another is situated outside the bike cage on the first level of the Parking Structure. If a member would prefer to store his or her bicycle in the bike cage in the Member Parking Structure, they may obtain a bike cage key from the manager on duty. The bike cage is for day-use only.\n\nMotorcycle parking is available in the southwest corner of the fourth floor of the Parking Structure.</string>
<<<<<<< HEAD
    <string name="ok">OK</string>
    <string name="save">SAVE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="child">Child</string>
=======
    <string name="logout">Logout</string>
    <string name="Update">Update</string>
>>>>>>> bf155daa80596a169bc6eb58cc8a1076dc261426

</resources>
