<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_with_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_with_google"
        android:text="@string/login_with_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_with_twitter"
        android:text="@string/login_with_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_with_password"
        android:text="@string/login_with_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>